[gd_scene load_steps=6 format=2]

[ext_resource path="res://Astronaut.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 13.6015

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[node name="Astronaut" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.38419e-07, -4.54747e-13 )
scale = Vector2( 0.3125, 0.3125 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Charge_detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Charge_detector"]
shape = SubResource( 3 )

[connection signal="mouse_entered" from="Hitbox" to="." method="_on_Hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_Hitbox_mouse_exited"]
[connection signal="body_entered" from="Charge_detector" to="." method="_on_Charge_detector_body_entered"]
[connection signal="body_exited" from="Charge_detector" to="." method="_on_Charge_detector_body_exited"]
